sidecar/k8s-mutate-webhook/deploy/webhook.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mutateme
  labels:
    app: mutateme
spec:
  publishNotReadyAddresses: true
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: mutateme

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mutateme
  labels:
    app: mutateme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mutateme
  template:
    metadata:
      name: mutateme
      labels:
        app: mutateme
    spec:
      containers:
        - name: mutator
          image: wx/k8s-mutate-webhook:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 250m
              memory: 64Mi

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mutateme
  labels:
    app: mutateme
webhooks:
  - name: mutateme.default.svc.cluster.local
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRFNU1EY3lOVEV4TkRjek9Gb1hEVEk1TURjeU1qRXhORGN6T0Zvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTHhzCk9Xay9OUE5jL2FMeFFiemZ3dnJlVGR3V3pXaU4rUlV2WTFLclRPWHB5WlBSaGMrUU8xc25ZQzdCWGtZTWNJVzAKaFVjLzRlR0Vtb3NGZjZpeTR5bzlUc3g4WW82dkxzazBHWktZay92dlJDcjVyL09wZUk2dFFOTTlMVFNkOXhXdgpFT0ZONDdsU2dF [...]
      service:
        name: mutateme
        namespace: default
        path: "/mutate"
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    namespaceSelector:
      matchLabels:
        mutateme: enabled
